# ai-news-radio

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  README.ja.md  README.md  docker-compose.yml  setup.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_reference_urls_to_json.py  003_add_media_paths.py  004_add_model_pricing.py  005_add_tts_pricing.py  006_add_episode_id_indexes.py  007_add_pronunciations.py  008_add_imagen_pricing.py  009_add_prompt_templates.py  010_add_news_grouping.py  011_add_news_item_body.py  012_add_news_item_excluded.py  013_add_brave_search_pricing.py  014_add_app_settings.py  015_remove_publish_step.py  016_add_gemini_tts_pricing.py  017_add_speaker_profiles_and_script_mode.py  018_add_note_article_columns.py  (+1 more)
backend/app/: config.py  database.py  main.py  tasks.py
backend/mcp_server/: __init__.py  __main__.py  client.py  config.py  server.py  tools.py
backend/scripts/: generate_se.py
backend/tests/: conftest.py  helpers.py  test_academic_search.py  test_ai_provider.py  test_analyzer.py  test_api.py  test_brave_search.py  test_collector.py  test_cost_estimator.py  test_document_parser.py  test_factchecker.py  test_from_articles.py  test_language_detection.py  test_mcp_tools.py  test_pipeline.py  test_pricing_api.py  test_scraper_service.py  test_scrapers.py  test_scriptwriter.py  test_tts_external.py  test_tts_providers.py  test_tts_utils.py  test_video.py  test_voice.py  test_web_crawler.py  test_youtube_transcript.py
docs/: mcp.md  (+3 more)
(+123 files in other folders)
